--- a/Server/views/email.ejs
+++ b/Server/views/email.ejs
@@ -55,7 +55,7 @@
 
       <div class="otp"><%= OTP %></div>
 
-      <p>This OTP is valid for the next <strong>1 hour</strong>. Please do not share this with anyone.</p>
+      <p>This OTP is valid for the next <strong>5 min</strong>. Please do not share this with anyone.</p>
     </div>
 
     <div class="footer">
